# CEP

./: README.md
ba_v2/: CMakeLists.txt
ba_v2/include/: BAExporter_v2.h  IBA_v2.h  PBAImp_v2.h  SE3Manifold.h
ba_v2/src/: BAExporter_v2.cpp  IBA_v2.cpp  PBAImp_v2.cpp
example_v2/: CMakeLists.txt  example.cpp
